# svg-mcp

./: .crib  .gitignore  .mcp.json  DESIGN.md  INKEX_PRIMITIVES.md  README.md  _quarto.yml  index.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs-on-change.yml  docs-on-tag.yml  release.yml
docs/: cookbook.md  gallery.md
scripts/: demo.py
src/svg_mcp/: __init__.py  config.py  geom.py  preview.py  server.py  session.py  typeset.py
src/svg_mcp/model/: __init__.py  document.py  errors.py  handles.py
src/svg_mcp/ops/: __init__.py  construct.py  geometry.py  layers.py  meta.py  modify.py  pages.py  paint.py  paths.py  resources.py
src/svg_mcp/query/: __init__.py  inspect.py  outline.py  select.py
src/svg_mcp/render/: __init__.py  base.py  cairo.py  export.py  feedback.py  inkscape.py  resvg.py  resvg_py.py
src/svg_mcp/schemas/: __init__.py  filters.py  gradients.py  style.py
src/svg_mcp/serialize/: __init__.py
tests/: test_context.py  test_edit_and_query.py  test_filters_parametric.py  test_geom.py  test_import.py  test_model.py  test_paint.py  test_render.py  test_resolve.py  test_structure.py  test_text_transform_ergonomics.py  test_tier1.py  test_tier2.py  test_tier3.py  test_typeset.py
