[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svg-mcp"
version = "0.2.1"
description = "A FastMCP server exposing structured, hierarchical SVG authoring with a render-and-see feedback loop."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "George Harker", email = "george@georgeharker.com" }]
keywords = ["svg", "mcp", "fastmcp", "inkex", "vector", "graphics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Text Processing :: Markup",
  "Operating System :: OS Independent",
]

dependencies = [
  "fastmcp>=2.3",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "lxml>=5.0",
  "pillow>=10.0",
  # Pure-Python font handling for text_to_path (glyph outlines + family lookup via name tables).
  "fonttools>=4.50",
  # inkex is the SVG DOM (transforms, styles, layers, masks, bbox, composed_transform).
  # PyPI 1.4.1: flat `inkex.colors` module and NO Image.embed_image() (we embed raster
  # manually). All element classes + bbox/CTM/specified_style/Transform@ are present.
  "inkex>=1.4.1",
  # In-process resvg binding (PyO3) — the default renderer, so the package is self-contained
  # with no external binary. Same engine as the `resvg` CLI (pixel-identical); the CLI is used
  # automatically instead when present (marginally faster), but is not required.
  "resvg-py>=0.1",
]

[project.optional-dependencies]
# Secondary vector/raster backend (PDF/PS/SVG out, in-process). Needs Homebrew cairo + pango.
cairo = ["cairocffi>=1.6", "pangocffi>=0.12", "pangocairocffi>=0.7"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/georgeharker/svg-mcp"
Repository = "https://github.com/georgeharker/svg-mcp"
Issues = "https://github.com/georgeharker/svg-mcp/issues"

[project.scripts]
svg-mcp = "svg_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/svg_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# Minimum supported version (3.12); also lets mypy parse modern dependency stubs (e.g.
# numpy's `type` aliases). Developed/run on 3.14.
python_version = "3.12"
strict = true
ignore_missing_imports = true

# inkex ships no type information; treat it as an opaque untyped module rather than
# analyzing its dynamic star-exports. Boundary returns are narrowed explicitly in our code.
[[tool.mypy.overrides]]
module = ["inkex", "inkex.*", "numpy", "numpy.*", "fontTools", "fontTools.*"]
ignore_missing_imports = true
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
